--- a/app/src/main/res/drawable/custom_button_1.xml
+++ b/app/src/main/res/drawable/custom_button_1.xml
@@ -5,7 +5,6 @@
     >
     <size android:height="50dp"
         android:width="110dp" />
-    <gradient android:startColor="@color/white"
-        android:endColor="@color/white" />
+    <solid android:color="@color/button_background_initial"/>
 
 </shape>
