--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,36 +22,48 @@
 
                 <Button
                     android:id="@+id/btn_HoaDon"
-                    android:layout_width="match_parent"
+                    android:layout_width="134dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:layout_marginRight="20dp"
-                    android:background="@drawable/custom_button_1"
-                    android:text="Hóa đơn" />
+                    android:text="Hóa đơn"
+                    android:background="@color/button_background_change"
+                    app:backgroundTint="@null"
+                    android:textColor="@color/button_text_change"/>
 
 
                 <Button
                     android:id="@+id/btn_T1"
-                    android:layout_width="match_parent"
+                    android:layout_width="134dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:layout_marginRight="20dp"
-                    android:background="@drawable/custom_button_1"
-                    android:text="Tầng 1" />
+                    android:text="Tầng 1"
+                    app:backgroundTint="@null"
+                    android:background="@color/button_background_initial"
+                    android:textColor="@color/button_text_initial"/>
 
                 <Button
                     android:id="@+id/btn_T2"
-                    android:layout_width="match_parent"
+                    android:layout_width="134dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:layout_marginRight="20dp"
-                    android:background="@drawable/custom_button_1"
-                    android:text="Tầng 2" />
+                    android:text="Tầng 2"
+                    app:backgroundTint="@null"
+                    android:background="@color/button_background_initial"
+                    android:textColor="@color/button_text_initial"/>
 
                 <Button
                     android:id="@+id/btn_MV"
-                    android:layout_width="match_parent"
+                    android:layout_width="134dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:layout_marginRight="20dp"
-                    android:background="@drawable/custom_button_1"
-                    android:text="Mang về" />
+                    android:text="Mang về"
+                    app:backgroundTint="@null"
+                    android:background="@color/button_background_initial"
+                    android:textColor="@color/button_text_initial"/>
             </LinearLayout>
         </HorizontalScrollView>
 
