--- a/app/src/main/res/layout/activity_mangve.xml
+++ b/app/src/main/res/layout/activity_mangve.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Tang1">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,47 +22,47 @@
 
                 <Button
                     android:id="@+id/btn_HoaDon"
+                    app:backgroundTint="@null"
                     android:layout_width="134dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="20dp"
                     android:background="@color/button_background_initial"
                     android:text="Hóa đơn"
-                    android:textColor="@color/button_text_initial"
-                    app:backgroundTint="@null" />
+                    android:textColor="@color/button_text_initial" />
 
                 <Button
                     android:id="@+id/btn_T1"
+                    app:backgroundTint="@null"
                     android:layout_width="134dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="20dp"
                     android:layout_marginTop="10dp"
-                    android:background="@color/button_background_change"
+                    android:layout_marginRight="20dp"
+                    android:background="@color/button_background_initial"
                     android:text="Tầng 1"
-                    android:textColor="@color/button_text_change"
-                    app:backgroundTint="@null" />
+                    android:textColor="@color/button_text_initial" />
 
                 <Button
                     android:id="@+id/btn_T2"
+                    app:backgroundTint="@null"
                     android:layout_width="134dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="20dp"
                     android:layout_marginTop="10dp"
+                    android:layout_marginRight="20dp"
                     android:background="@color/button_background_initial"
                     android:text="Tầng 2"
-                    android:textColor="@color/button_text_initial"
-                    app:backgroundTint="@null" />
+                    android:textColor="@color/button_text_initial" />
 
                 <Button
                     android:id="@+id/btn_MV"
+                    app:backgroundTint="@null"
                     android:layout_width="134dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="20dp"
                     android:layout_marginTop="10dp"
-                    android:background="@color/button_background_initial"
+                    android:layout_marginRight="20dp"
+                    android:background="@color/button_background_change"
                     android:text="Mang về"
-                    android:textColor="@color/button_text_initial"
-                    app:backgroundTint="@null" />
+                    android:textColor="@color/button_text_change" />
             </LinearLayout>
         </HorizontalScrollView>
 
@@ -75,5 +73,4 @@
             android:numColumns="3" />
 
     </LinearLayout>
-
 </LinearLayout>
