--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="button_background_initial">#A39D9D</color>
+    <color name="button_text_initial">#000000</color>
+    <color name="button_background_change">#2DBF28</color>
+    <color name="button_text_change">#FFFFFF</color>
+    <color name="gray">#DADADA</color>
 </resources>
