--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".HoaDon">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -66,6 +66,15 @@
                     android:textColor="@color/button_text_initial"/>
             </LinearLayout>
         </HorizontalScrollView>
+
+        <GridView
+            android:id="@+id/gridView_HoaDon"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:numColumns="2"
+            android:background="@color/custom_milk"
+            android:layout_marginTop="20dp"
+            />
 
     </LinearLayout>
 
