--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,10 +49,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="20dp"
-                    android:text="Tầng 2"
-                    app:backgroundTint="@null"
                     android:background="@color/button_background_initial"
-                    android:textColor="@color/button_text_initial"/>
+                    android:text="Tầng 2"
+                    android:textColor="@color/button_text_initial"
+                    app:backgroundTint="@null" />
 
                 <Button
                     android:id="@+id/btn_MV"
