--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HoaDon">
+    tools:context=".HoaDon"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,10 +27,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="20dp"
+                    android:background="@color/custom_seconds"
                     android:text="Hóa đơn"
-                    android:background="@color/button_background_change"
-                    app:backgroundTint="@null"
-                    android:textColor="@color/button_text_change"/>
+                    android:textColor="@color/button_text_change"
+                    app:backgroundTint="@null" />
 
 
                 <Button
