--- a/app/src/main/res/layout/activity_tang2.xml
+++ b/app/src/main/res/layout/activity_tang2.xml
@@ -48,9 +48,9 @@
                     android:id="@+id/btn_T2"
                     android:layout_width="134dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="20dp"
                     android:layout_marginTop="10dp"
-                    android:background="@color/button_background_change"
+                    android:layout_marginRight="20dp"
+                    android:background="@color/custom_seconds"
                     android:text="Tầng 2"
                     android:textColor="@color/button_text_change"
                     app:backgroundTint="@null" />
