--- a/app/src/main/res/drawable/orange_button_background.xml
+++ b/app/src/main/res/drawable/orange_button_background.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="50dp"/>
-            <solid android:color="@color/orange"/>
+            <solid android:color="@color/custom_orange"/>
         </shape>
     </item>
 </selector>
