--- a/app/src/main/res/layout/activity_hoadon.xml
+++ b/app/src/main/res/layout/activity_hoadon.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    tools:context=".HoaDon"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,11 +17,9 @@
             android:layout_height="wrap_content">
 
             <LinearLayout
-
-                android:layout_width="match_parent"
+                android:layout_width="136dp"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
-
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="136dp"
@@ -33,9 +34,9 @@
                         android:id="@+id/btn_HoaDon"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@color/button_background_initial"
+                        android:background="@color/custom_seconds"
                         android:text="Hóa đơn"
-                        android:textColor="@color/button_text_initial"
+                        android:textColor="@color/button_text_change"
                         app:backgroundTint="@null" />
 
                 </androidx.cardview.widget.CardView>
@@ -47,14 +48,14 @@
                     app:cardCornerRadius="20dp"
                     app:cardElevation="4dp"
                     android:layout_margin="10dp"><!-- Tùy chọn: đặt độ nâng của thẻ -->
-                    <Button
-                        android:id="@+id/btn_T1"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:text="Tầng 1"
-                        app:backgroundTint="@null"
-                        android:background="@color/button_background_initial"
-                        android:textColor="@color/button_text_initial"/>
+                <Button
+                    android:id="@+id/btn_T1"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="Tầng 1"
+                    app:backgroundTint="@null"
+                    android:background="@color/button_background_initial"
+                    android:textColor="@color/button_text_initial"/>
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
@@ -63,14 +64,14 @@
                     app:cardCornerRadius="20dp"
                     app:cardElevation="4dp"
                     android:layout_margin="10dp">
-                    <Button
-                        android:id="@+id/btn_T2"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@color/button_background_initial"
-                        android:text="Tầng 2"
-                        android:textColor="@color/button_text_initial"
-                        app:backgroundTint="@null" />
+                <Button
+                    android:id="@+id/btn_T2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/button_background_initial"
+                    android:text="Tầng 2"
+                    android:textColor="@color/button_text_initial"
+                    app:backgroundTint="@null" />
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
@@ -79,31 +80,28 @@
                     app:cardCornerRadius="20dp"
                     app:cardElevation="4dp"
                     android:layout_margin="10dp">
-                    <Button
-                        android:id="@+id/btn_MV"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:text="Mang về"
-                        app:backgroundTint="@null"
-                        android:background="@color/custom_seconds"
-                        android:textColor="@color/button_text_change"/>
+                <Button
+                    android:id="@+id/btn_MV"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="Mang về"
+                    app:backgroundTint="@null"
+                    android:background="@color/button_background_initial"
+                    android:textColor="@color/button_text_initial"/>
                 </androidx.cardview.widget.CardView>
-
-
 
             </LinearLayout>
         </HorizontalScrollView>
 
         <GridView
-            android:id="@+id/gridView_table"
+            android:id="@+id/gridView_HoaDon"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:numColumns="3"
-            android:layout_marginTop="8dp"
-            android:background="@color/custom_backgroudGrid"
-            android:verticalSpacing="40dp"
-            android:horizontalSpacing="20dp"
+            android:layout_height="wrap_content"
+            android:numColumns="2"
+            android:layout_marginTop="10dp"
+
             />
 
     </LinearLayout>
-</LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
