--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,8 @@
     <color name="custom_milk">#eee</color>
     <color name="custom_orange">#fd7014</color>
     <color name="custom_purple">#5b67f1</color>
+    <color name="custom_backgroudGrid">#c2f8ff</color>
+
 
 
 </resources>
