--- a/app/src/main/res/layout/activity_gio_hang.xml
+++ b/app/src/main/res/layout/activity_gio_hang.xml
@@ -64,9 +64,7 @@
             android:padding="5dp"
             android:layout_marginRight="20dp"
             android:layout_width="wrap_content"
-            android:layout_he
-
-            ight="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="right"
             android:text="50.000"
