Thêm giao diện món ăn

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="custom_orange">#fd7014</color>
     <color name="custom_purple">#5b67f1</color>
     <color name="custom_backgroudGrid">#c2f8ff</color>
+    <color name="custom_green">#008e5b</color>
 
 
 
