--- a/app/src/main/res/layout/layout_item_table.xml
+++ b/app/src/main/res/layout/layout_item_table.xml
@@ -8,8 +8,8 @@
     android:gravity="center">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
@@ -24,8 +24,8 @@
         app:layout_constraintVertical_bias="0.5">
 
         <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="match_parent"
+            android:id="@+id/imBan"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/table"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -37,12 +37,13 @@
 
         <TextView
             android:id="@+id/txtMaBan"
-            android:layout_width="match_parent"
+            android:layout_width="51dp"
             android:layout_height="51dp"
             android:layout_gravity="center"
             android:gravity="center"
+            android:text="1"
             android:textColor="#000000"
-            android:textSize="20dp" />
+            android:textSize="24dp" />
 
     </androidx.cardview.widget.CardView>
 
