Thêm chức năng loại món ăn

--- a/app/src/main/res/layout/layout_hienthi_monan.xml
+++ b/app/src/main/res/layout/layout_hienthi_monan.xml
@@ -27,12 +27,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:layout_marginBottom="10dp"
             >
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                >
+                android:layout_height="186dp"
+                android:layout_margin="10dp">
 
                 <ImageView
                     android:id="@+id/imgAnhMA"
@@ -79,6 +80,12 @@
                 </LinearLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                >
+
 
             <EditText
                 android:id="@+id/TT_editTenMA"
@@ -102,33 +109,34 @@
                 android:textSize="18dp"
 
                 />
-
             <Spinner
                 android:id="@+id/TT_spnLoaiMA"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:layout_margin="5dp"
                 android:padding="10dp"
-                />
 
+                android:background="@drawable/layout_background_radius"
+                />
+            </LinearLayout>
 
         </LinearLayout>
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:text="DANH SÁCH MÓN ĂN"
+            android:background="@color/custom_orange"
             android:gravity="center"
             android:padding="10dp"
+            android:text="DANH SÁCH MÓN ĂN"
             android:textColor="#ffffff"
-            android:background="@color/custom_orange"
-            />
+            android:textSize="20dp" />
+
         <ListView
             android:id="@+id/lvMonAn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            />
+            android:layout_marginTop="5dp" />
     </LinearLayout>
 
 </FrameLayout>
