--- a/app/src/main/res/layout/layout_themmonan.xml
+++ b/app/src/main/res/layout/layout_themmonan.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <TextView
@@ -14,15 +15,19 @@
         android:textStyle="bold"
         android:background="@color/custom_seconds"
         />
-
-    <ImageView
-        android:id="@+id/anhMA"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:src="@drawable/logo"
-
-        />
+        app:cardCornerRadius="8dp"
+        >
+        <ImageView
+            android:id="@+id/anhMA"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_weight="1"
+            android:src="@drawable/logo"
+            />
+    </androidx.cardview.widget.CardView>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -63,15 +68,16 @@
                 android:orientation="horizontal"
             >
                 <Spinner
-                    android:id="@+id/TT_spnLMA"
+                    android:id="@+id/spnLMA"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:layout_margin="10dp"
-                    android:padding="10dp"
+                    android:padding="15dp"
                     />
 
                 <ImageButton
+                    android:id="@+id/imgBtnThemLoai"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:src="@drawable/baseline_add_circle_24"
@@ -84,10 +90,12 @@
         </LinearLayout>
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginTop="20dp">
 
         <Button
             android:id="@+id/btnThemMA"
