Thêm chức năng của món ăn

--- a/app/src/main/res/layout/fragment_monan.xml
+++ b/app/src/main/res/layout/fragment_monan.xml
@@ -107,7 +107,7 @@
                 android:background="@drawable/layout_background_radius"
                 android:hint="Giá tiền"
                 android:textSize="18dp"
-
+                android:inputType="number"
                 />
             <Spinner
                 android:id="@+id/TT_spnLoaiMA"
