--- a/app/src/main/res/drawable/layout_background_radius_red.xml
+++ b/app/src/main/res/drawable/layout_background_radius_red.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/custom_redSC" /> <!-- Màu nền trong suốt -->
+    <solid android:color="@color/custom_btnXoa" /> <!-- Màu nền trong suốt -->
     <corners android:radius="16dp" /> <!-- Bán kính góc bo -->
-    <stroke android:width="2dp" android:color="@color/custom_redSC" />
+    <stroke android:width="2dp" android:color="@color/custom_btnXoa" />
 </shape>
