--- a/app/src/main/res/layout/activity_themmonan.xml
+++ b/app/src/main/res/layout/activity_themmonan.xml
@@ -19,6 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="8dp"
+        android:layout_margin="10dp"
         >
         <ImageView
             android:id="@+id/anhMA"
