--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,13 @@
     <color name="custom_purple">#5b67f1</color>
     <color name="custom_backgroudGrid">#c2f8ff</color>
     <color name="custom_green">#008e5b</color>
+    <color name="custom_border">#118690</color>
+    <color name="custom_btnThem">#009192</color>
+    <color name="custom_white">#ffffff</color>
+    <color name="custom_btnXoa">#f2c070</color>
+
+
+
 
 
 
