Layout đổi mật khẩu

--- a/app/src/main/res/layout/fragment_nhanvien.xml
+++ b/app/src/main/res/layout/fragment_nhanvien.xml
@@ -55,7 +55,7 @@
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:backgroundTint="#EAEAEA"
+        android:backgroundTint="@color/custom_orange"
         android:paddingTop="12dp"
         android:paddingBottom="12dp"
         android:text="Chọn"
@@ -117,14 +117,15 @@
         android:layout_width="165dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="224dp"
-        android:backgroundTint="#956A4B"
+        android:backgroundTint="@color/custom_orange"
         android:paddingTop="12dp"
         android:paddingBottom="12dp"
+
         android:text="Lưu"
         android:textSize="18sp"
         app:cornerRadius="50dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.833"
+        app:layout_constraintHorizontal_bias="0.792"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -134,7 +135,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
-        android:backgroundTint="#EAEAEA"
+        android:backgroundTint="@color/custom_orange"
         android:paddingTop="12dp"
         android:paddingBottom="12dp"
         android:text="Hủy"
