--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -5,18 +5,27 @@
             android:id="@+id/nav_TrangChu"
             android:icon="@drawable/home"
             android:title="Trang chủ"/>
+
         <item android:id="@+id/nav_nhanvien"
             android:title="@string/nav_nhanvien"
             android:icon="@drawable/ic_nhanvien_background"/>
-            <item android:id="@+id/nav_monan"
+
+        <item android:id="@+id/nav_monan"
             android:title="@string/nav_monan"
             android:icon="@drawable/ic_mycay_background"/>
+
         <item android:id="@+id/nav_hoadon"
             android:title="@string/nav_hoadon"
             android:icon="@drawable/ic_hoadon_background"/>
+
+        <item android:id="@+id/nav_doimatkhau"
+            android:title="Đổi mật khẩu"
+            android:src="@drawable/ic_dangxuat_background"/>
+
         <item android:id="@+id/nav_dangxuat"
             android:title="@string/nav_dangxuat"
             android:src="@drawable/ic_dangxuat_background"/>
+
     </group>
 
 </menu>
