--- a/app/src/main/res/layout/activity_gio_hang.xml
+++ b/app/src/main/res/layout/activity_gio_hang.xml
@@ -30,7 +30,7 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclergiohang"
+        android:id="@+id/recyclerViewgiohang"
         android:layout_margin="5dp"
         app:layout_constraintTop_toBottomOf="@+id/toolbar2"
         app:layout_constraintBottom_toBottomOf="@+id/layout"
@@ -67,7 +67,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="right"
-            android:text="50.000"
+            android:text="55.000"
             android:textSize="20dp"
             android:textStyle="bold"
             android:textColor="@color/custom_redF"/>
