--- a/app/src/main/res/layout/activity_themmonan.xml
+++ b/app/src/main/res/layout/activity_themmonan.xml
@@ -61,6 +61,7 @@
                 android:background="@drawable/layout_background_radius"
                 android:hint="Giá tiền"
                 android:textColor="@color/custom_black"
+                android:inputType="number"
                 />
 
             <LinearLayout
@@ -74,7 +75,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:layout_margin="10dp"
-                    android:padding="15dp"
+                    android:background="@drawable/layout_background_radius"
                     />
 
                 <ImageButton
