--- a/app/src/main/res/layout/spiner_loaimonan.xml
+++ b/app/src/main/res/layout/spiner_loaimonan.xml
@@ -6,12 +6,12 @@
 
     <TextView
         android:id="@+id/spinTenLoai"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:padding="15dp"
         android:textSize="16sp"
         android:text="Tên loại"
-        android:layout_gravity="center"
+        android:textColor="#000000"
         />
 
 </LinearLayout>
