Chỉnh sửa layout

--- a/app/src/main/res/layout/activity_themmonan.xml
+++ b/app/src/main/res/layout/activity_themmonan.xml
@@ -5,16 +5,25 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
-    <TextView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Thêm Món Ăn"
-        android:textSize="32dp"
+        app:cardCornerRadius="20dp"
         android:layout_marginTop="10dp"
-        android:textStyle="bold"
-        android:background="@color/custom_seconds"
-        />
+        >
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Thêm Món Ăn"
+            android:textSize="32dp"
+            android:textStyle="bold"
+            android:background="#f86e51"
+            android:textColor="@color/custom_white"
+            />
+
+    </androidx.cardview.widget.CardView>
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -25,8 +34,7 @@
             android:id="@+id/anhMA"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:layout_weight="1"
-            android:src="@drawable/logo"
+            android:src="@drawable/mycaybo"
             />
     </androidx.cardview.widget.CardView>
 
