--- a/app/src/main/res/drawable/layout_background_radius.xml
+++ b/app/src/main/res/drawable/layout_background_radius.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@android:color/transparent" /> <!-- Màu nền trong suốt -->
     <corners android:radius="8dp" /> <!-- Bán kính góc bo -->
-    <stroke android:width="2dp" android:color="@color/custom_border" />
+    <stroke android:width="1dp" android:color="#66F86E51" />
 </shape>
