--- a/app/src/main/res/layout/fragment_loaimonan.xml
+++ b/app/src/main/res/layout/fragment_loaimonan.xml
@@ -12,15 +12,23 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="CẬP NHẬT LOẠI MÓN ĂN"
-            android:textSize="20dp"
-            android:textStyle="bold"
-            android:gravity="center"
-            android:padding="5dp"
-            />
+            android:layout_marginTop="10dp"
+            app:cardCornerRadius="8dp"
+            >
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="CẬP NHẬT LOẠI MÓN ĂN"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                android:gravity="center"
+                android:padding="5dp"
+                />
+        </androidx.cardview.widget.CardView>
+
 
         <LinearLayout
             android:layout_width="320dp"
